--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "celebrate": "^9.0.1",
+    "connect-mongo": "^3.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.0",
-    "mongoose": "^5.3.15"
+    "mongoose": "^5.3.15",
+    "mongoose-bcrypt": "^1.6.0"
   }
 }
