--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.0",
     "mongoose": "^5.3.15",
-    "mongoose-bcrypt": "^1.6.0"
+    "mongoose-bcrypt": "^1.6.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
